--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,6 @@
     <!-- Custom Css link start -->
 </head>
 <body>
-    <a href="blog.html">blog</a>
+    <a href="index.html">index</a>
 </body>
 </html>
