--- a/match.html
+++ b/match.html
@@ -13,6 +13,172 @@
     <!-- Custom Css link start -->
 </head>
 <body>
-    <a href="index.html">index</a>
+    <!-- banner section start -->
+    <section id="banner_sec">
+        <div class="container">
+            <div class="row">
+                <div class="banner_info">
+                    <h1>The Greatest show on the earth</h1>
+                    <p>You can get all world cup football match info here. Don't miss many match. See look up world-cup website and enjoy your favorite football match</p>
+                    <a class="btn" href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                </div>
+                <div class="banner_img"><img src="images/Banner Image.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <!-- banner section end -->
+    <!-- blog section start  -->
+    <section id="blog_sec">
+        <div class="container">
+            <div class="row">
+                <div class="blogs_menu">
+                    <a href="match.html" class="btn" style="background-color:var(--btn-active);color:var(--btn-text);border:1px solid var(--btn-active);">Upcoming Match</a>
+                    <a href="#" class="btn">All Group</a>
+                    <a href="index.html" class="btn">Blog</a>
+                </div>
+                <div class="blogs">
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="tumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog_info">
+                            <a href="#" class="btn">Transfer</a>
+                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <div class="icon">
+                                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span><i class="fa-regular fa-message"></i>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- blog section start  -->
+    <!-- foooter section start -->
+    <footer>
+       <div class="container center">
+            <h2>Gole</h2>
+            <div class="footer_link">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service </a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App </a>
+                <a href="#">Goal Live</a>
+            </div>
+            <div class="social_icon">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-twitter-square"></i>
+            </div>
+       </div>
+    </footer>
+    <!-- foooter section start -->
 </body>
 </html>
