--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         </div>
     </section>
     <!-- blog section start  -->
+    <!-- foooter section start -->
     <footer>
        <div class="container center">
             <h2>Gole</h2>
@@ -178,5 +179,6 @@
             </div>
        </div>
     </footer>
+    <!-- foooter section start -->
 </body>
 </html>
