update metach info

--- a/match.html
+++ b/match.html
@@ -37,120 +37,102 @@
                     <a href="index.html" class="btn">Blog</a>
                 </div>
                 <div class="blogs">
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
-                    <div class="blog">
+                    <div class="blog match">
                         <div class="tumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/flag-group.png" alt="">
                         </div>
                         <div class="blog_info">
-                            <a href="#" class="btn">Transfer</a>
-                            <h4>Transfer Live: Chlesea in talks over Kimpenbe transfer</h4>
+                            <h4>Germany VS France</h4>
                             <div class="icon">
-                                <span><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span><i class="fa-regular fa-message"></i>23</span>
+                                <span>April 01, 2023, 1.00 AM</span>
                             </div>
                         </div>
                     </div>
