--- a/match.html
+++ b/match.html
@@ -41,7 +41,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -52,7 +52,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -63,7 +63,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -74,7 +74,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -85,7 +85,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -96,7 +96,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -107,7 +107,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -118,7 +118,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
@@ -129,7 +129,7 @@
                         <div class="tumbnail">
                             <img src="images/flag-group.png" alt="">
                         </div>
-                        <div class="blog_info">
+                        <div class="blog_info center">
                             <h4>Germany VS France</h4>
                             <div class="icon">
                                 <span>April 01, 2023, 1.00 AM</span>
