--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <p>You can get all world cup football match info here. Don't miss many match. See look up world-cup website and enjoy your favorite football match</p>
                     <a class="btn" href="#">Watch Live <i class="fa-solid fa-angle-right"></i></a>
                 </div>
-                <div class="banner_img"><img src="images/Banner Image.png" alt=""></div>
+                <div class="banner_img">
+                    <img src="images/Banner Image.png" alt="">
+                </div>
             </div>
         </div>
     </section>
