--- a/match.html
+++ b/match.html
@@ -27,7 +27,7 @@
         </div>
     </section>
     <!-- banner section end -->
-    <!-- blog section start  -->
+    <!-- Upcoming Match section start  -->
     <section id="blog_sec">
         <div class="container">
             <div class="row">
@@ -140,7 +140,7 @@
             </div>
         </div>
     </section>
-    <!-- blog section start  -->
+    <!-- Upcoming Match section start  -->
     <!-- foooter section start -->
     <footer>
        <div class="container center">
