--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="more">
+                    <a class="btn" href="#">View All</a>
+                </div>
             </div>
         </div>
     </section>
