--- a/match.html
+++ b/match.html
@@ -137,6 +137,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="more ">
+                    <a class="btn "href="#">View All</a>
+                </div>
             </div>
         </div>
     </section>
