--- a/match.html
+++ b/match.html
@@ -157,10 +157,10 @@
                 <a href="#">Goal Live</a>
             </div>
             <div class="social_icon">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-twitter-square"></i>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://twitter.com/"><i class="fa-brands fa-twitter-square"></i></a>
             </div>
        </div>
     </footer>
