--- a/match.html
+++ b/match.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="blogs_menu">
-                    <a href="match.html" class="btn" style="background-color:var(--btn-active);color:var(--btn-text);border:1px solid var(--btn-active);">Upcoming Match</a>
+                    <a href="match.html" class="btn" style="background-color:var(--btn-active);color:var(--btn-text);border:1px solid var(--btn-active);">Match</a>
                     <a href="#" class="btn">All Group</a>
                     <a href="index.html" class="btn">Blog</a>
                 </div>
